adding lorem nd' some color

--- a/indexx.html
+++ b/indexx.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1 class="title">First title</h1>
-	<p class="para">Lorem lorem...</p>
+	<p class="para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima labore quos nam officia cum natus quo laudantium nostrum! Corporis quidem est nisi blanditiis eaque minima molestiae numquam aliquid eligendi doloribus.</p>
 
 
 </body>
